gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ngrok-apiops-demo-gatewayclass
  namespace: apiops-demo
spec:
  controllerName: ngrok.com/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ngrok-apiops-demo-gateway
  namespace: apiops-demo
spec:
  gatewayClassName: ngrok
  listeners:
    - name: ngrok-apiops-demo-listener
      hostname: "social-trusty-hermit.ngrok.app"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ngrokcert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ngrok-apiops-demo-route
  namespace: apiops-demo
spec:
  parentRefs:
    - kind: Gateway
      name: ngrok-apiops-demo-gateway
      namespace: apiops-demo
  hostnames:
    - "social-trusty-hermit.ngrok.app" 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: ngrok.k8s.ngrok.com
            kind: NgrokTrafficPolicy
            name: "traffic-policy-example"
      backendRefs:
        - name: ngrok-apiops-demo-service
          port: 80
          kind: Service
